Utilizando a lib Vavr para trabalhar com Notification Pattern